--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
 
-<!--     <style>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8" />
+  <title>Wavy Bird</title>
+
+  <!--     <style>
       body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
       canvas { border: 2px solid white; }
     </style> -->
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-  </body>
+</head>
+
+<body>
+  <main id="main">
+  </main>
+  <script src="js/config.js"></script>
+  <script src="js/stimuli.js"></script>
+  <script src="js/bird.js"></script>
+  <script src="js/pipe.js"></script>
+  <script src="js/ui.js"></script>
+  <script src="js/serial.js"></script>
+  <script src="js/audio.js"></script>
+  <script src="sketch.js"></script>
+</body>
+
 </html>
