--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
   <main id="main">
   </main>
   <script src="js/config.js"></script>
-  <script src="js/stimuli.js"></script>
   <script src="js/bird.js"></script>
   <script src="js/pipe.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/serial.js"></script>
-  <script src="sketch.js"></script>
+  <script src="js/sketch.js"></script>
 </body>
 
 </html>
